Resolves: tdf#152438 constrain popups from MenuButtons with toplevel parent

if the toplevel parent is the application window, then under wayland
constrain the popup within the toplevel window, but allow it to escape
if the parent isn't the application, e.g. a dialog

Change-Id: I8d5c423a2c8e034464f110e51df04dee587f40dd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165590
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>